# temp-mail

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml
proto/: mail.proto
src/: email.rs  error.rs  lib.rs  models.rs
src/sql/: create_domains_table.sql  create_mailbox_status_type.sql  create_mailboxes_table.sql  create_messages_table.sql  get_domains.sql  get_messages.sql  save_user_email.sql
