[package]
name = "mail"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/bin/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
actix-web = "4"
regex = "1.11.1"
chrono = "0.4.39"
tonic = "0.12.3"
prost = "0.13.5"
thiserror = "2.0.12"
mailparse = "0.16.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "uuid", "chrono", "postgres"] }
sqlx-postgres = "0.8.3"
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.140"
serde = "1.0.219"

[build-dependencies]
tonic-build = "0.12.3"
